--- a/css/main.css
+++ b/css/main.css
@@ -21,17 +21,14 @@ a {
 	transition: color 0.3s;
 }
 
-/* icons svg element */
-.i svg {
-	filter: var(--filter-shadow);
-	/* set size to their containers */
+/* set dimensions with span */
+.i a, .i svg {
 	height: inherit;
 	width: inherit;
 }
 
-.i a {
-	height: inherit;
-	width: inherit;
+.i svg {
+	filter: var(--filter-shadow);
 }
 
 /* 1 column layout */
@@ -128,17 +125,16 @@ h1 {
 	margin-top: -3rem;
 }
 
-.i-popcorn,
-.i-burger {
+.snacks-i {
 	margin: 0 3%;
 	filter: drop-shadow(rgba(0, 0, 0, 0.4) -2px -2px 4px);
 }
 
-.i-popcorn {
+.i_popcorn {
 	height: 9rem;
 }
 
-.i-burger {
+.i_burger {
 	height: 10rem;
 }
 
@@ -153,7 +149,7 @@ footer {
 }
 
 .footer-i {
-	height: 3rem;
+	height: 2.5rem;
 	vertical-align: middle;
 	margin-right: 0.5rem;
 	margin-left: 0.5rem;
@@ -163,12 +159,8 @@ footer {
 	margin-bottom: 1rem;
 }
 
-.i-heart svg {
+.i_heart svg {
 	margin-top: 3px;
-}
-
-.i-aws {
-	height: 3.6rem;
 }
 
 
