--- a/css/main.css
+++ b/css/main.css
@@ -36,7 +36,9 @@ a {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	width: 100%;
+	width: inherit;
+	padding-left: 5%;
+	padding-right: 5%;
 }
 
 
@@ -48,8 +50,7 @@ a {
 	border-radius: 30px 30px 0 0;
 	box-shadow: var(--box-shadow);
 
-	width: 40%;
-	margin-top: 4%;
+	margin: 5rem 12% 0 12%;
 	padding: 1.5rem 0;
 }
 
@@ -57,6 +58,7 @@ h1 {
 	font-weight: var(--font-bold);
 	text-transform: uppercase;
 	text-shadow: var(--text-shadow);
+	margin: 0 4rem;
 }
 
 
@@ -76,8 +78,7 @@ h1 {
 	border-radius: 5px;
 
 	display: flex;
-	flex-direction: row;
-	width: 80vw;
+	flex-flow: row wrap;
 }
 
 .letter-board-half-1 {
@@ -118,10 +119,10 @@ h1 {
 	display: flex;
 	justify-content: space-between;
 	align-items: flex-end;
-	width: inherit;
+	width: 100%;
 
 	position: relative;
-	top: 4rem;
+	top: 1rem;
 	margin-top: -3rem;
 }
 
@@ -136,6 +137,10 @@ h1 {
 
 .i_burger {
 	height: 10rem;
+}
+
+.i_burger svg {
+	margin-top: 0.5rem;
 }
 
 
