tweaked drop-shadow and hover properties of links

--- a/css/main.css
+++ b/css/main.css
@@ -18,7 +18,11 @@ body {
 
 a {
 	text-decoration: none;
-	transition: color 0.3s;
+	transition: all 0.3s;
+}
+
+a:hover {
+	filter: saturate(200%);
 }
 
 /* set dimensions with span */
@@ -123,12 +127,6 @@ h1 {
 
 	position: relative;
 	top: 1rem;
-	margin-top: -3rem;
-}
-
-.snacks-i {
-	margin: 0 3%;
-	filter: drop-shadow(rgba(0, 0, 0, 0.4) -2px -2px 4px);
 }
 
 .i_popcorn {
