--- a/css/variables.css
+++ b/css/variables.css
@@ -39,11 +39,11 @@
 }
 
 
-/* Misc
+/* Effects
 ======================================================= */
 
 :root {
-	--box-shadow:		rgba(0, 0, 0, 0.5) 5px 5px 10px;
+	--box-shadow:		rgba(0, 0, 0, 0.7) 5px 5px 10px;
 	--text-shadow:		rgba(0, 0, 0, 0.5) 1px 1px 3px;
-	--filter-shadow:	drop-shadow(rgba(0, 0, 0, 0.5) 2px 2px 3px);
+	--filter-shadow:	drop-shadow(rgba(0, 0, 0, 0.7) 3px 3px 4px);
 }
