--- a/css/main.css
+++ b/css/main.css
@@ -81,6 +81,7 @@ h1 {
 	box-shadow: var(--box-shadow);
 	border-radius: 5px;
 
+	width: 80%;
 	display: flex;
 	flex-flow: row wrap;
 }
@@ -108,6 +109,7 @@ h1 {
 ======================================================= */
 
 .player {
+	background: #000;
 	box-shadow: var(--box-shadow);
 	height: calc(70vw * 0.5625);
 	width: 70vw;
