--- a/css/index.css
+++ b/css/index.css
@@ -77,40 +77,32 @@ h1 {
 /* Letter board
 ======================================================= */
 
-.letter-board {
-	font-family: var(--font-letter-sign);
-	font-size: var(--font-medium);
-	font-weight: var(--font-bold);
-	text-transform: uppercase;
-	letter-spacing: 0.5rem;
-	word-spacing: 0.5rem;
-
+.board {
 	background: var(--light-beige);
 	border: var(--dark-grey) solid 10px;
 	box-shadow: var(--box-shadow);
 	border-radius: 5px;
 
 	width: 80%;
-	display: flex;
-	flex-flow: row wrap;
+	display: grid;
 }
 
-.letter-board-col {
-	flex-grow: 1;
-	display: flex;
-	flex-direction: column;
-}
-
-.letter-board-row {
+.board-tile {
 	border-bottom: var(--dark-grey) solid 2px;
-	width: inherit;
 	padding: 0.5rem 2rem;
-	flex-grow: 1;
 }
 
-.letter-board-heading {
+.board-text {
+	font-family: var(--font-letter-sign);
+	font-size: var(--font-medium);
+	font-weight: var(--font-bold);
+	text-transform: uppercase;
+	letter-spacing: 0.5rem;
+	word-spacing: 0.5rem;
+}
+
+.board-h2 {
 	color: var(--popcorn-red);
-	font-size: inherit;
 }
 
 
