--- a/src/css/variables.css
+++ b/src/css/variables.css
@@ -35,7 +35,8 @@
 	--brown:			#605243;
 
 	/* From snacks SVGs */
-	--popcorn-red:		 #dd3e46;
+	--popcorn-red:		#dd3e46;
+	--soda-red:			#e1462b;
 }
 
 
